// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListsForm /> renders create list 1`] = `
<form
  onSubmit={[Function]}
>
  <InputField
    componentType="input"
    disabled={false}
    inputType="text"
    label="Name *"
    name="name"
  />
  <ToggleField
    disabled={false}
    label="Shared *"
    name="shared"
  />
  <SelectField
    disabled={false}
    label="List Type *"
    name="listTypeId"
    options={
      Array [
        Object {
          "label": "Disposition Label",
          "value": "Disposition Value",
        },
        Object {
          "label": "Reason Label",
          "value": "Reason Value",
        },
      ]
    }
    required={false}
  />
</form>
`;

exports[`<ListsForm /> renders update list 1`] = `
<form
  onSubmit={[Function]}
>
  <InputField
    componentType="input"
    disabled={false}
    inputType="text"
    label="Name *"
    name="name"
  />
  <ToggleField
    disabled={false}
    label="Shared *"
    name="shared"
  />
</form>
`;
